# mldevops_exercise

./: .gitignore  fashion_minst.py  lab1.ipynb  pyproject.toml
