[tool.poetry]
name = "mldevops-exercise"
version = "0.1.0"
description = ""
authors = ["Jan Kardaszewicz <jjkardaszewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.4.1"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
wandb = "^0.18.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
